notes and cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,18 @@ set(CMAKE_C_STANDARD 99)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
 include(assert_checks)
 
-enable_testing()
+set(target test_run_ok)
+add_executable(${target} ${target}.c)
+assert_run_success(${target})
 
-assert_run_ok(check_run_success test_run_ok.c)
-assert_run_fail(check_run_failure test_run_fail.c)
-assert_build_ok(check_build_success test_build_ok.c)
-assert_build_fail(check_build_failure test_build_fail.c)
+set(target test_run_fail)
+add_executable(${target} ${target}.c)
+assert_run_failure(${target})
+
+set(target test_build_ok)
+add_executable(${target} ${target}.c)
+assert_build_success(${target})
+
+set(target test_build_fail)
+add_executable(${target} ${target}.c)
+assert_build_failure(${target})
